--- a/src/view/fxml/Passagem.fxml
+++ b/src/view/fxml/Passagem.fxml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import view.util.mask.MaskedTextField?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="445.0" prefWidth="917.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PassagemController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="445.0" prefWidth="917.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PassagemController">
    <children>
       <TableView fx:id="tablePassagens" layoutX="14.0" layoutY="14.0" onMouseClicked="#selectPassagem" prefHeight="383.0" prefWidth="890.0">
         <columns>
@@ -24,14 +19,15 @@
         </columns>
       </TableView>
       <Label layoutX="14.0" layoutY="413.0" text="Buscar por:" />
-      <RadioButton fx:id="rdNumero" layoutX="79.0" layoutY="413.0" mnemonicParsing="false" selected="true" text="Número da passagem">
+      <RadioButton fx:id="rdNumero" layoutX="79.0" layoutY="413.0" mnemonicParsing="false" onAction="#changeInput" selected="true" text="Número da passagem">
          <toggleGroup>
             <ToggleGroup fx:id="searchType" />
          </toggleGroup>
       </RadioButton>
-      <RadioButton fx:id="rdCpf" layoutX="228.0" layoutY="413.0" mnemonicParsing="false" text="CPF cliente" toggleGroup="$searchType" />
-      <TextField fx:id="txtSearchBar" layoutX="321.0" layoutY="409.0" prefHeight="25.0" prefWidth="197.0" />
-      <Button layoutX="528.0" layoutY="409.0" mnemonicParsing="false" onAction="#searchForViagens" onMouseClicked="#selectPassagem" prefHeight="25.0" prefWidth="59.0" text="Buscar" />
+      <RadioButton fx:id="rdCpf" layoutX="228.0" layoutY="413.0" mnemonicParsing="false" onAction="#changeInput" text="CPF cliente" toggleGroup="$searchType" />
+      <TextField fx:id="txtSearchId" layoutX="321.0" layoutY="409.0" prefHeight="25.0" prefWidth="197.0" />
+       <MaskedTextField fx:id="txtSearchCpf" layoutX="321.0" layoutY="409.0" mask="###.###.###-##" prefHeight="25.0" prefWidth="197.0" visible="false" />
+       <Button layoutX="528.0" layoutY="409.0" mnemonicParsing="false" onAction="#searchForViagens" onMouseClicked="#selectPassagem" prefHeight="25.0" prefWidth="59.0" text="Buscar" />
       <Button fx:id="btnReemicao" disable="true" layoutX="607.0" layoutY="409.0" mnemonicParsing="false" onAction="#printPassagem" prefHeight="25.0" prefWidth="86.0" text="Reemissão" />
       <Button fx:id="btnDevolucao" disable="true" layoutX="703.0" layoutY="409.0" mnemonicParsing="false" onAction="#removePassagem" prefHeight="25.0" prefWidth="86.0" text="Devolução" />
       <Button fx:id="btnReagendamento" disable="true" layoutX="799.0" layoutY="409.0" mnemonicParsing="false" onAction="#reschedulePassagem" text="Reagendamento" />
