--- a/src/view/fxml/Relatorio.fxml
+++ b/src/view/fxml/Relatorio.fxml
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-<?import view.util.mask.MaskedTextField?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
+<?import view.util.mask.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="459.0" prefWidth="976.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RelatorioController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="459.0" prefWidth="976.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RelatorioController">
    <children>
-      <Line endX="-101.0" endY="-10.0" layoutX="885.0" layoutY="242.0" opacity="0.25" startX="100.0" startY="-10.0" />
+      <Line endX="-101.0" endY="-10.0" layoutX="885.0" layoutY="311.0" opacity="0.25" startX="100.0" startY="-10.0" />
       <TableView fx:id="tableRelatorio" layoutX="14.0" layoutY="14.0" prefHeight="383.0" prefWidth="770.0">
         <columns>
           <TableColumn fx:id="colData" editable="false" minWidth="-Infinity" prefWidth="90.0" resizable="false" text="Data Viagem" />
@@ -26,14 +19,14 @@
             <TableColumn fx:id="colLucro" editable="false" minWidth="-Infinity" prefWidth="94.0" resizable="false" text="Lucro R$" />
         </columns>
       </TableView>
-      <Label layoutX="798.0" layoutY="240.0" text="Intervalo:">
+      <Label layoutX="798.0" layoutY="305.0" text="Intervalo:">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
-      <Button fx:id="btnGerar" layoutX="797.0" layoutY="339.0" mnemonicParsing="false" onAction="#searchDateInterval" prefHeight="25.0" prefWidth="168.0" text="Gerar Relatório" />
-      <DatePicker fx:id="dtPickerIni" layoutX="824.0" layoutY="269.0" prefHeight="25.0" prefWidth="138.0" />
-      <DatePicker fx:id="dtPickerFim" layoutX="824.0" layoutY="303.0" prefHeight="25.0" prefWidth="138.0" />
-      <Label layoutX="797.0" layoutY="307.0" text="Até:" />
+      <Button fx:id="btnGerar" layoutX="797.0" layoutY="392.0" mnemonicParsing="false" onAction="#searchDateInterval" prefHeight="25.0" prefWidth="168.0" text="Gerar Relatório" />
+      <DatePicker fx:id="dtPickerIni" layoutX="824.0" layoutY="329.0" prefHeight="25.0" prefWidth="138.0" />
+      <DatePicker fx:id="dtPickerFim" layoutX="824.0" layoutY="361.0" prefHeight="25.0" prefWidth="138.0" />
+      <Label layoutX="797.0" layoutY="365.0" text="Até:" />
       <Label layoutX="558.0" layoutY="401.0" text="Total:">
          <font>
             <Font name="System Bold" size="12.0" />
@@ -52,25 +45,36 @@
       <Line endX="-0.5" endY="1.5" layoutX="690.0" layoutY="444.0" opacity="0.25" startX="-0.5" startY="-20.5" />
       <Label fx:id="lbMediaUso" alignment="CENTER" contentDisplay="CENTER" layoutX="595.0" layoutY="426.0" prefHeight="17.0" prefWidth="95.0" text="" textAlignment="CENTER" />
       <Label fx:id="lbMediaLucro" alignment="CENTER" contentDisplay="CENTER" layoutX="689.0" layoutY="426.0" prefHeight="17.0" prefWidth="95.0" text="" textAlignment="CENTER" />
-      <Pane fx:id="paneFilter" disable="true" layoutX="784.0" layoutY="16.0" prefHeight="204.0" prefWidth="201.0">
+      <Pane fx:id="paneFilter" disable="true" layoutX="784.0" layoutY="11.0" prefHeight="288.0" prefWidth="201.0">
          <children>
-            <Label layoutX="14.0" layoutY="3.0" text="Filtrar por:">
+            <Label layoutX="14.0" text="Filtrar por:">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="31.0" text="Linha:" />
-            <TextField fx:id="txtFieldLinha" layoutX="12.0" layoutY="48.0" prefHeight="25.0" prefWidth="168.0" />
-            <TextField fx:id="txtFieldTrecho" layoutX="12.0" layoutY="96.0" prefHeight="25.0" prefWidth="168.0" />
-            <Label layoutX="14.0" layoutY="79.0" text="Trecho:" />
-            <MaskedTextField fx:id="txtFieldHorarioIni" layoutX="12.0" layoutY="144.0" prefHeight="25.0" prefWidth="72.0" mask="##:##" />
-            <MaskedTextField fx:id="txtFieldHorarioFim" layoutX="108.0" layoutY="144.0" prefHeight="25.0" prefWidth="72.0" mask="##:##" />
-            <Label layoutX="14.0" layoutY="127.0" text="Horário Saída entre:" />
-            <Button layoutX="12.0" layoutY="179.0" mnemonicParsing="false" onAction="#filterResults" prefHeight="25.0" prefWidth="168.0" text="Filtrar Resultados" />
-            <Label layoutX="88.0" layoutY="148.0" text="até" />
+            <Label layoutX="14.0" layoutY="21.0" text="Linha:" />
+            <TextField fx:id="txtFieldLinha" layoutX="12.0" layoutY="38.0" prefHeight="25.0" prefWidth="168.0" />
+            <TextField fx:id="txtFieldTrechoIni" layoutX="40.0" layoutY="83.0" prefHeight="25.0" prefWidth="140.0" />
+            <Label layoutX="14.0" layoutY="66.0" text="Trecho intervalo:" />
+            <MaskedTextField fx:id="txtFieldHorarioIni" layoutX="12.0" layoutY="161.0" mask="##:##" prefHeight="25.0" prefWidth="72.0" />
+            <MaskedTextField fx:id="txtFieldHorarioFim" layoutX="108.0" layoutY="161.0" mask="##:##" prefHeight="25.0" prefWidth="72.0" />
+            <Label layoutX="14.0" layoutY="144.0" text="Horário Saída intervalo:" />
+            <Button layoutX="12.0" layoutY="256.0" mnemonicParsing="false" onAction="#filterResults" prefHeight="25.0" prefWidth="168.0" text="Filtrar Resultados" />
+            <Label layoutX="88.0" layoutY="165.0" text="até" />
+            <TextField fx:id="txtFieldUsoIni" layoutX="50.0" layoutY="193.0" prefHeight="25.0" prefWidth="54.0" />
+            <TextField fx:id="txtFieldUsoFim" layoutX="126.0" layoutY="193.0" prefHeight="25.0" prefWidth="54.0" />
+            <Label layoutX="23.0" layoutY="197.0" text="Uso:" />
+            <Label layoutX="107.0" layoutY="197.0" text="até" />
+            <Label layoutX="14.0" layoutY="229.0" text="Lucro:" />
+            <TextField fx:id="txtFieldLucroFim" layoutX="126.0" layoutY="225.0" prefHeight="25.0" prefWidth="54.0" />
+            <TextField fx:id="txtFieldLucroIni" layoutX="50.0" layoutY="225.0" prefHeight="25.0" prefWidth="54.0" />
+            <Label layoutX="107.0" layoutY="229.0" text="até" />
+            <Label layoutX="17.0" layoutY="87.0" text="De:" />
+            <TextField fx:id="txtFieldTrechoFim" layoutX="40.0" layoutY="114.0" prefHeight="25.0" prefWidth="140.0" />
+            <Label layoutX="14.0" layoutY="118.0" text="Até:" />
          </children>
       </Pane>
-      <Label layoutX="800.0" layoutY="273.0" text="De:" />
-      <Button fx:id="btnExport" disable="true" layoutX="797.0" layoutY="372.0" mnemonicParsing="false" onAction="#tableExport" prefHeight="25.0" prefWidth="168.0" text="Exportar Planilha" />
+      <Label layoutX="800.0" layoutY="333.0" text="De:" />
+      <Button fx:id="btnExport" disable="true" layoutX="797.0" layoutY="422.0" mnemonicParsing="false" onAction="#tableExport" prefHeight="25.0" prefWidth="168.0" text="Exportar Planilha" />
    </children>
 </AnchorPane>
