ComboBox autocomplete, mascara de entrada monetaria e filtros do relatorio(wip)

--- a/src/view/fxml/FinalizacaoVenda.fxml
+++ b/src/view/fxml/FinalizacaoVenda.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
-<?import view.util.mask.MaskedTextField?>
+<?import view.util.sharedCodes.MaskedTextField?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="373.0" prefWidth="262.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FinalizacaoVendaController">
    <children>
