--- a/src/view/fxml/EmissaoBilhete.fxml
+++ b/src/view/fxml/EmissaoBilhete.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -153,8 +153,9 @@
          </children>
       </Pane>
       <Label layoutX="14.0" layoutY="15.0" text="Impressora:" />
-      <ChoiceBox fx:id="chboxPrinters" layoutX="79.0" layoutY="11.0" prefHeight="25.0" prefWidth="169.0" />
-      <Button fx:id="btnPrint" layoutX="258.0" layoutY="11.0" mnemonicParsing="false" onAction="#initPrint" prefHeight="25.0" prefWidth="107.0" text="Imprimir" />
+      <Button fx:id="btnPrint" layoutX="268.0" layoutY="11.0" mnemonicParsing="false" onAction="#initPrint" prefHeight="25.0" prefWidth="97.0" text="Imprimir" />
       <Label fx:id="lbPrintState" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="14.0" layoutY="451.0" prefHeight="17.0" prefWidth="351.0" text="Estado da impressão" textAlignment="RIGHT" textFill="#727272" />
+      <ComboBox fx:id="cBoxPrinters" layoutX="14.0" layoutY="11.0" onAction="#selectPrinter" prefHeight="25.0" prefWidth="153.0" promptText="Impressora..." />
+      <Button layoutX="174.0" layoutY="11.0" mnemonicParsing="false" onAction="#configPage" text="Configuração" />
    </children>
 </AnchorPane>
