--- a/src/view/fxml/Relatorio.fxml
+++ b/src/view/fxml/Relatorio.fxml
@@ -4,10 +4,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
-<?import view.util.mask.*?>
+<?import view.util.sharedCodes.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="490.0" prefWidth="976.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RelatorioController">
    <children>
+      <Rectangle fill="WHITE" height="50.0" layoutX="595.0" layoutY="427.0" stroke="#00000040" strokeType="INSIDE" width="189.0" />
+      <Rectangle fill="WHITE" height="25.0" layoutX="595.0" layoutY="452.0" stroke="#0000003f" strokeType="INSIDE" width="189.0" />
       <Line endX="-101.0" endY="-10.0" layoutX="885.0" layoutY="338.0" opacity="0.25" startX="100.0" startY="-10.0" />
       <TableView fx:id="tableRelatorio" layoutX="14.0" layoutY="14.0" prefHeight="413.0" prefWidth="770.0">
         <columns>
@@ -32,7 +34,6 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Rectangle fill="#ffffff00" height="25.0" layoutX="595.0" layoutY="427.0" opacity="0.25" stroke="BLACK" strokeType="INSIDE" width="189.0" />
       <Line endX="-0.5" endY="1.5" layoutX="690.0" layoutY="449.0" opacity="0.25" startX="-0.5" startY="-20.5" />
       <Label fx:id="lbTotalUso" alignment="CENTER" contentDisplay="CENTER" layoutX="595.0" layoutY="431.0" prefHeight="17.0" prefWidth="95.0" text="" textAlignment="CENTER" />
       <Label fx:id="lbTotalLucro" alignment="CENTER" contentDisplay="CENTER" layoutX="689.0" layoutY="431.0" prefHeight="17.0" prefWidth="95.0" text="" textAlignment="CENTER" />
@@ -41,7 +42,6 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Rectangle fill="#ffffff00" height="25.0" layoutX="595.0" layoutY="452.0" opacity="0.25" stroke="BLACK" strokeType="INSIDE" width="189.0" />
       <Line endX="-0.5" endY="1.5" layoutX="690.0" layoutY="474.0" opacity="0.25" startX="-0.5" startY="-20.5" />
       <Label fx:id="lbMediaUso" alignment="CENTER" contentDisplay="CENTER" layoutX="595.0" layoutY="456.0" prefHeight="17.0" prefWidth="95.0" text="" textAlignment="CENTER" />
       <Label fx:id="lbMediaLucro" alignment="CENTER" contentDisplay="CENTER" layoutX="689.0" layoutY="456.0" prefHeight="17.0" prefWidth="95.0" text="" textAlignment="CENTER" />
@@ -53,25 +53,26 @@
                </font>
             </Label>
             <Label layoutX="14.0" layoutY="28.0" text="Linha:" />
-            <TextField fx:id="txtFieldLinha" layoutX="12.0" layoutY="45.0" prefHeight="25.0" prefWidth="168.0" />
-            <TextField fx:id="txtFieldTrechoIni" layoutX="40.0" layoutY="96.0" prefHeight="25.0" prefWidth="140.0" />
+            <ComboBox fx:id="cBoxLinha" editable="true" layoutX="12.0" layoutY="45.0" prefHeight="25.0" prefWidth="168.0" />
+            <ComboBox fx:id="cBoxTrechoIni" editable="true" layoutX="40.0" layoutY="96.0" prefHeight="25.0" prefWidth="140.0" />
+            <ComboBox fx:id="cBoxTrechoFim" editable="true" layoutX="40.0" layoutY="127.0" prefHeight="25.0" prefWidth="140.0" />
             <Label layoutX="14.0" layoutY="78.0" text="Trecho intervalo:" />
-            <MaskedTextField fx:id="txtFieldHorarioIni" layoutX="12.0" layoutY="178.0" mask="##:##" prefHeight="25.0" prefWidth="72.0" />
-            <MaskedTextField fx:id="txtFieldHorarioFim" layoutX="108.0" layoutY="178.0" mask="##:##" prefHeight="25.0" prefWidth="72.0" />
+            <MaskedTextField fx:id="txtFieldHorarioIni" alignment="CENTER" layoutX="12.0" layoutY="178.0" mask="##:##" prefHeight="25.0" prefWidth="72.0" />
+            <MaskedTextField fx:id="txtFieldHorarioFim" alignment="CENTER" layoutX="108.0" layoutY="178.0" mask="##:##" prefHeight="25.0" prefWidth="72.0" />
             <Label layoutX="14.0" layoutY="160.0" text="Horário Saída intervalo:" />
-            <Button layoutX="12.0" layoutY="282.0" mnemonicParsing="false" onAction="#filterResults" prefHeight="25.0" prefWidth="168.0" text="Filtrar Resultados" />
+            <Button layoutX="12.0" layoutY="282.0" mnemonicParsing="false" onAction="#filterResults" prefHeight="25.0" prefWidth="78.0" text="Filtrar" />
             <Label layoutX="88.0" layoutY="182.0" text="até" />
-            <TextField fx:id="txtFieldUsoIni" layoutX="50.0" layoutY="213.0" prefHeight="25.0" prefWidth="54.0" />
-            <TextField fx:id="txtFieldUsoFim" layoutX="126.0" layoutY="213.0" prefHeight="25.0" prefWidth="54.0" />
+            <MaskedTextField fx:id="txtFieldUsoIni" alignment="CENTER" layoutX="50.0" layoutY="213.0" mask="######" prefHeight="25.0" prefWidth="54.0" />
+            <MaskedTextField fx:id="txtFieldUsoFim" alignment="CENTER" layoutX="126.0" layoutY="213.0" mask="######" prefHeight="25.0" prefWidth="54.0" />
             <Label layoutX="23.0" layoutY="217.0" text="Uso:" />
             <Label layoutX="107.0" layoutY="217.0" text="até" />
             <Label layoutX="14.0" layoutY="252.0" text="Lucro:" />
-            <TextField fx:id="txtFieldLucroFim" layoutX="126.0" layoutY="248.0" prefHeight="25.0" prefWidth="54.0" />
-            <TextField fx:id="txtFieldLucroIni" layoutX="50.0" layoutY="248.0" prefHeight="25.0" prefWidth="54.0" />
+            <CurrencyField fx:id="txtFieldLucroFim" alignment="CENTER" layoutX="126.0" layoutY="248.0" prefHeight="25.0" prefWidth="54.0" />
+            <CurrencyField fx:id="txtFieldLucroIni" alignment="CENTER" layoutX="50.0" layoutY="248.0" prefHeight="25.0" prefWidth="54.0" />
             <Label layoutX="107.0" layoutY="252.0" text="até" />
             <Label layoutX="17.0" layoutY="100.0" text="De:" />
-            <TextField fx:id="txtFieldTrechoFim" layoutX="40.0" layoutY="127.0" prefHeight="25.0" prefWidth="140.0" />
             <Label layoutX="14.0" layoutY="131.0" text="Até:" />
+            <Button layoutX="102.0" layoutY="282.0" mnemonicParsing="false" onAction="#clearFields" prefHeight="25.0" prefWidth="78.0" text="Limpar" />
          </children>
       </Pane>
       <Label layoutX="800.0" layoutY="363.0" text="De:" />
