--- a/src/view/fxml/Linha.fxml
+++ b/src/view/fxml/Linha.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
+<?import view.util.sharedCodes.CurrencyField?>
 <AnchorPane prefHeight="500.0" prefWidth="801.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LinhaController">
     <TableView fx:id="tabelaLinha" layoutX="14.0" layoutY="29.0" prefHeight="424.0" prefWidth="414.0">
         <columns>
@@ -73,13 +74,13 @@
    <Button fx:id="btAdicionarLinha" layoutX="750.0" layoutY="30.0" mnemonicParsing="false" onAction="#addLinha" prefHeight="25.0" prefWidth="37.0" text="OK" />
    <Pane fx:id="paneCriaTrecho" layoutX="442.0" layoutY="44.0" prefHeight="377.0" prefWidth="329.0" style="visibility: false;">
     <children>
-        <TextField fx:id="tfOrigem" layoutX="168.0" layoutY="53.0" />
-        <TextField fx:id="tfDestino" layoutX="168.0" layoutY="93.0" />
-        <TextField fx:id="tfQuilometragem" layoutX="168.0" layoutY="134.0" />
-        <TextField fx:id="tfTaxaEmbarque" layoutX="168.0" layoutY="175.0" />
-        <TextField fx:id="tfValorSeguro" layoutX="168.0" layoutY="216.0" />
-        <TextField fx:id="tfValorPassagem" layoutX="168.0" layoutY="256.0" />
-        <TextField fx:id="tfTempoDuracao" layoutX="168.0" layoutY="298.0" />
+        <TextField fx:id="tfOrigem" alignment="CENTER" layoutX="168.0" layoutY="53.0"/>
+        <TextField fx:id="tfDestino" alignment="CENTER" layoutX="168.0" layoutY="93.0"/>
+        <TextField fx:id="tfQuilometragem" alignment="CENTER" layoutX="168.0" layoutY="134.0" promptText="KM"/>
+        <CurrencyField fx:id="tfTaxaEmbarque" alignment="CENTER" layoutX="168.0" layoutY="175.0"/>
+        <CurrencyField fx:id="tfValorSeguro" alignment="CENTER"  layoutX="168.0" layoutY="216.0"/>
+        <CurrencyField fx:id="tfValorPassagem" alignment="CENTER" layoutX="168.0" layoutY="256.0"/>
+        <TextField fx:id="tfTempoDuracao" alignment="CENTER" layoutX="168.0" layoutY="298.0" promptText="Minutos"/>
         <Label layoutX="40.0" layoutY="302.0" text="Tempo de Duração:" />
         <Label layoutX="40.0" layoutY="179.0" text="Taxa de Embarque:" />
         <Label layoutX="40.0" layoutY="260.0" text="Valor da Passagem:" />
@@ -88,22 +89,22 @@
         <Label layoutX="40.0" layoutY="97.0" text="Cidade de Destino:" />
         <Label layoutX="40.0" layoutY="57.0" text="Cidade de Origem:" />
         <Label fx:id="lbValorTotal" layoutX="10.0" layoutY="295.0" />
-         <Label fx:id="lbCriarTrecho" layoutX="103.0" layoutY="14.0" prefHeight="20.0" prefWidth="120.0" text="Crie o novo trecho">
+        <Label fx:id="lbCriarTrecho" layoutX="103.0" layoutY="14.0" prefHeight="20.0" prefWidth="120.0" text="Crie o novo trecho">
             <font>
-               <Font size="14.0" />
+                <Font size="14.0" />
             </font>
-         </Label>
-         <Button fx:id="btSalvarTrecho" layoutX="211.0" layoutY="348.0" mnemonicParsing="false" onAction="#saveTrecho" prefHeight="25.0" prefWidth="101.0" text="Salvar" />
-         <Button fx:id="btCancelarTrecho" layoutX="93.0" layoutY="348.0" mnemonicParsing="false" onAction="#cancelTrecho" prefHeight="25.0" prefWidth="101.0" text="Cancelar" />
+        </Label>
+        <Button fx:id="btSalvarTrecho" layoutX="211.0" layoutY="348.0" mnemonicParsing="false" onAction="#saveTrecho" prefHeight="25.0" prefWidth="101.0" text="Salvar" />
+        <Button fx:id="btCancelarTrecho" layoutX="93.0" layoutY="348.0" mnemonicParsing="false" onAction="#cancelTrecho" prefHeight="25.0" prefWidth="101.0" text="Cancelar" />
     </children>
    </Pane>
-   <Pane fx:id="paneImg" layoutX="448.0" layoutY="27.0" prefHeight="410.0" prefWidth="323.0" style="visibility: true;">
-      <children>
-         <ImageView fitHeight="303.0" fitWidth="302.0" layoutX="11.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@../../resources/trecho.png" />
-            </image>
-         </ImageView>
-      </children>
-   </Pane>
+    <Pane fx:id="paneImg" layoutX="448.0" layoutY="27.0" prefHeight="410.0" prefWidth="323.0" style="visibility: true;">
+        <children>
+            <ImageView fitHeight="303.0" fitWidth="302.0" layoutX="11.0" layoutY="54.0" pickOnBounds="true" preserveRatio="true">
+                <image>
+                    <Image url="@../../resources/trecho.png" />
+                </image>
+            </ImageView>
+        </children>
+    </Pane>
 </AnchorPane>
