--- a/src/view/fxml/Onibus.fxml
+++ b/src/view/fxml/Onibus.fxml
@@ -8,14 +8,15 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
+<?import view.util.sharedCodes.MaskedTextField?>
 <AnchorPane prefHeight="400.0" prefWidth="723.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.OnibusController">
     <children>
         <Pane fx:id="paneOnibus" blendMode="SRC_ATOP" layoutX="491.0" layoutY="29.0" prefHeight="304.0" prefWidth="223.0">
             <children>
-                <TextField fx:id="txtFieldRenavam" layoutX="67.0" layoutY="14.0" />
+                <MaskedTextField fx:id="txtFieldRenavam" layoutX="67.0" layoutY="14.0" mask="###########"/>
                 <Label layoutX="7.0" layoutY="54.0" text="Placa:" />
                 <Label layoutX="7.0" layoutY="18.0" text="Renavam:" />
-                <TextField fx:id="txtFieldPlaca" layoutX="67.0" layoutY="50.0" />
+                <MaskedTextField fx:id="txtFieldPlaca" layoutX="67.0" layoutY="50.0" mask="UUU-#A##" />
 
             </children>
         </Pane>
