--- a/src/view/fxml/Linha.fxml
+++ b/src/view/fxml/Linha.fxml
@@ -1,28 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import view.util.sharedCodes.CurrencyField?>
-<AnchorPane prefHeight="500.0" prefWidth="801.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LinhaController">
-    <TableView fx:id="tabelaLinha" layoutX="14.0" layoutY="29.0" prefHeight="424.0" prefWidth="414.0">
+
+<?import view.util.sharedCodes.IntegerField?>
+<?import view.util.sharedCodes.DoubleField?>
+<AnchorPane prefHeight="500.0" prefWidth="801.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LinhaController">
+    <TableView fx:id="tabelaLinha" layoutX="14.0" layoutY="29.0" onMouseClicked="#seeLinhadByClick" prefHeight="424.0" prefWidth="414.0">
         <columns>
             <TableColumn fx:id="cNome" prefWidth="240.0" text="Nome" />
             <TableColumn fx:id="cValorLinha" prefWidth="78.0" text="Valor Total" />
             <TableColumn fx:id="cQuilometragemLinha" prefWidth="95.0" text="Quilometragem" />
         </columns>
     </TableView>
-    <Button fx:id="btCriarLinha" layoutX="15.0" layoutY="465.0" mnemonicParsing="false" onAction="#viewCreateLinha" prefHeight="25.0" prefWidth="135.0" text="Criar Linha" />
-    <Button fx:id="btVerLinha" layoutX="174.0" layoutY="465.0" mnemonicParsing="false" onAction="#seeLinha" prefHeight="25.0" prefWidth="171.0" text="Visualizar Linha" />
+    <Button fx:id="btCriarLinha" layoutX="318.0" layoutY="465.0" mnemonicParsing="false" onAction="#viewCreateLinha" prefHeight="25.0" prefWidth="109.0" text="Criar Linha" />
    <Pane fx:id="paneLinhaTrecho" layoutX="441.0" layoutY="57.0" prefHeight="440.0" prefWidth="356.0" style="visibility: false;">
       <children>
          <ComboBox fx:id="cbTrechos" layoutX="63.0" layoutY="4.0" prefHeight="25.0" prefWidth="283.0" promptText="Adicione um trecho a linha" visibleRowCount="15" />
@@ -71,16 +64,16 @@
       </font>
    </Label>
    <TextField fx:id="txtNomeLinha" layoutX="502.0" layoutY="30.0" prefHeight="25.0" prefWidth="237.0" />
-   <Button fx:id="btAdicionarLinha" layoutX="750.0" layoutY="30.0" mnemonicParsing="false" onAction="#addLinha" prefHeight="25.0" prefWidth="37.0" text="OK" />
+    <Button fx:id="btAdicionarLinha" layoutX="750.0" layoutY="30.0" mnemonicParsing="false" onAction="#addLinha" prefHeight="25.0" prefWidth="37.0" text="OK" />
    <Pane fx:id="paneCriaTrecho" layoutX="442.0" layoutY="44.0" prefHeight="377.0" prefWidth="329.0" style="visibility: false;">
     <children>
-        <TextField fx:id="tfOrigem" alignment="CENTER" layoutX="168.0" layoutY="53.0"/>
-        <TextField fx:id="tfDestino" alignment="CENTER" layoutX="168.0" layoutY="93.0"/>
-        <TextField fx:id="tfQuilometragem" alignment="CENTER" layoutX="168.0" layoutY="134.0" promptText="KM"/>
+        <TextField fx:id="tfOrigem" alignment="CENTER" layoutX="168.0" layoutY="53.0" />
+        <TextField fx:id="tfDestino" alignment="CENTER" layoutX="168.0" layoutY="93.0" />
+        <DoubleField fx:id="tfQuilometragem" alignment="CENTER" layoutX="168.0" layoutY="134.0" promptText="Km" labelR=" Km"/>
         <CurrencyField fx:id="tfTaxaEmbarque" alignment="CENTER" layoutX="168.0" layoutY="175.0"/>
         <CurrencyField fx:id="tfValorSeguro" alignment="CENTER"  layoutX="168.0" layoutY="216.0"/>
         <CurrencyField fx:id="tfValorPassagem" alignment="CENTER" layoutX="168.0" layoutY="256.0"/>
-        <TextField fx:id="tfTempoDuracao" alignment="CENTER" layoutX="168.0" layoutY="298.0" promptText="Minutos"/>
+        <IntegerField fx:id="tfTempoDuracao" alignment="CENTER" layoutX="168.0" layoutY="298.0" promptText="Minutos" labelR=" Minutos"/>
         <Label layoutX="40.0" layoutY="302.0" text="Tempo de Duração:" />
         <Label layoutX="40.0" layoutY="179.0" text="Taxa de Embarque:" />
         <Label layoutX="40.0" layoutY="260.0" text="Valor da Passagem:" />
